--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "~13.1.0",
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
+    "moment": "^2.29.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -30,12 +31,15 @@
     "@types/node": "^12.11.1",
     "@types/sockjs-client": "^1.5.1",
     "@types/stompjs": "^2.3.5",
+    "autoprefixer": "^10.4.4",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "~4.5.2"
   }
 }
